<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/genderToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/maleGenderBtn"
            style="@style/Spectre.Button.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:icon="@drawable/ic_male" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/femaleGenderBtn"
            style="@style/Spectre.Button.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:icon="@drawable/ic_female" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otherGenderBtn"
            style="@style/Spectre.Button.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            app:icon="@drawable/ic_transgender" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>